--- a/androidApp/app/src/main/res/layout/content_schedule_form.xml
+++ b/androidApp/app/src/main/res/layout/content_schedule_form.xml
@@ -373,16 +373,17 @@ android:paddingBottom="15dp"
 
 
     <LinearLayout
+        android:id="@+id/footer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/footer"
 
-     android:background="@color/backgroundGrey"
+        android:layout_marginBottom="0dp"
+        android:background="@color/backgroundGrey"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintRight_toRightOf="parent">
 
         <Button
             android:id="@+id/saveBtn"
@@ -396,8 +397,7 @@ android:paddingBottom="15dp"
 
             android:background="@drawable/buttton"
             android:elevation="10dp"
-            android:text="Save"
-           />
+            android:text="Save" />
 
         <Button
             android:id="@+id/updateBtn"
@@ -408,12 +408,10 @@ android:paddingBottom="15dp"
             android:layout_marginLeft="32dp"
             android:layout_marginRight="32dp"
             android:layout_marginStart="32dp"
-          android:visibility="gone"
             android:background="@drawable/buttton"
             android:elevation="10dp"
             android:text="Update"
-           />
-
+            android:visibility="gone" />
 
 
     </LinearLayout>
